packages/flow-type-tests/__tests__/fixtures/fixture-importing.0.117.0.txt
Error ---------------------------------------------------- packages/flow-type-tests/__tests__/fixtures/importing.js:4:34

Cannot resolve module `./exporting.js`.

   4| import {Foo, Bar, Baz, Qux} from "./exporting.js";
                                       ^^^^^^^^^^^^^^^^



Found 1 error
